force-app/main/default/objects/RelatedCustomObject__c/RelatedCustomObject__c.object-meta.xml
<CustomObject>
    <label>RelatedCustomObject</label>
    <nameField>
        <label>RelatedCustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RelatedCustomObject</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>