force-app/main/default/objects/RelatedCustomObject__c/fields/PickList__c.field-meta.xml
<CustomField>
    <fullName>PickList__c</fullName>
    <label>PickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value A</fullName>
            </value>
            <value>
                <fullName>Value B</fullName>
            </value>
            <value>
                <fullName>Value C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>